adds portfolio and contact code and style updates

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,13 +14,13 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
+    <nav class="navbar navbar-expand-lg navbar-dark justify-content-end" style="background-color:#17a2b8">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">About</a>
+                <a class="nav-link" href="index.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -31,33 +31,44 @@
     <!--Main content container-->
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-8 col-lg-6">
-                <h1 class="mt-1">Cecelia Martinez</h1>
-                <h2 class="font-italic">Full-Stack Software Developer</h2>
-            </div>
-            <div class="col-12 col-md-4 col-lg-6">
-                <img src="avatar.png" class="img-fluid rounded-circle d-block mx-auto p-3">
+            <div class="col-12">
+                <h1 class="mt-2">Portfolio</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-12 col-lg-6">
-                <p>I am a full-stack developer with a digital journalism and finance background. I am a current
-                    full-time student at the Georgia Tech Full-Stack Software Developement Boot Camp and have and MBA in
-                    Marketing from Lynn University.</p>
-                <p>I have a passion for creative problem solving, collaboration, and lifetime learning. I am
-                    particularly interested in empowering individuals through projects involving financial literacy,
-                    education, diversity, and accessibility. My hobbies include music, fiction writing, travel, and
-                    dogs.</p>
+            <div class="col-12 col-md-6 col-lg-4">
+                <img src="assets/portfolio1.jpg" alt="portfolio1" class="img-fluid img-thumbnail my-3"
+                    style="border-color:#17a2b8">
+                <h3 class="text-center">Project 1</h3>
             </div>
-            <div class="col-12 col-md-12 col-lg-6 text-center">
-                <i class="fas fa-envelope fa-2x"></i>
-                <i class="fab fa-github fa-2x"></i>
-                <i class="fab fa-twitter fa-2x"></i>
-                <i class="fab fa-linkedin fa-2x"></i>
+            <div class="col-12 col-md-6 col-lg-4">
+                <img src="assets/portfolio2.jpg" alt="portfolio2" class="img-fluid img-thumbnail my-3"
+                    style="border-color:#17a2b8">
+                <h3 class="text-center">Project 2</h3>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <img src="assets/portfolio3.jpg" alt="portfolio3" class="img-fluid img-thumbnail my-3"
+                    style="border-color:#17a2b8">
+                <h3 class="text-center">Project 3</h3>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <img src="assets/portfolio4.jpg" alt="portfolio4" class="img-fluid img-thumbnail my-3"
+                    style="border-color:#17a2b8">
+                <h3 class="text-center">Project 4</h3>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <img src="assets/portfolio5.jpg" alt="portfolio5" class="img-fluid img-thumbnail my-3"
+                    style="border-color:#17a2b8">
+                <h3 class="text-center">Project 5</h3>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+                <img src="assets/portfolio6.jpg" alt="portfolio6" class="img-fluid img-thumbnail my-3"
+                    style="border-color:#17a2b8">
+                <h3 class="text-center">Project 6</h3>
             </div>
         </div>
     </div>
-    <nav class="navbar navbar-light bg-light fixed-bottom">
+    <nav class="navbar navbar-light">
         <span class="navbar-text mx-auto">
             <p>Copyright 2019 Cecelia Martinez</p>
         </span>
