--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,13 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
+    <nav class="navbar navbar-expand-lg navbar-dark justify-content-end" style="background-color:#17a2b8">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">About</a>
+                <a class="nav-link" href="index.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -31,29 +31,41 @@
     <!--Main content container-->
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-8 col-lg-6">
-                <h1 class="mt-1">Cecelia Martinez</h1>
-                <h2 class="font-italic">Full-Stack Software Developer</h2>
-            </div>
-            <div class="col-12 col-md-4 col-lg-6">
-                <img src="avatar.png" class="img-fluid rounded-circle d-block mx-auto p-3">
+            <div class="col-12">
+                <h1 class="mt-2">
+                    Contact
+                </h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-12 col-lg-6">
-                <p>I am a full-stack developer with a digital journalism and finance background. I am a current
-                    full-time student at the Georgia Tech Full-Stack Software Developement Boot Camp and have and MBA in
-                    Marketing from Lynn University.</p>
-                <p>I have a passion for creative problem solving, collaboration, and lifetime learning. I am
-                    particularly interested in empowering individuals through projects involving financial literacy,
-                    education, diversity, and accessibility. My hobbies include music, fiction writing, travel, and
-                    dogs.</p>
+            <div class="col-12">
+                <form>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea class="form-control" id="message" rows="3"></textarea>
+                    </div>
+                    <button type="button" class="btn btn-info">Send</button>
+                </form>
             </div>
-            <div class="col-12 col-md-12 col-lg-6 text-center">
-                <i class="fas fa-envelope fa-2x"></i>
-                <i class="fab fa-github fa-2x"></i>
-                <i class="fab fa-twitter fa-2x"></i>
-                <i class="fab fa-linkedin fa-2x"></i>
+        </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <a href="mailto:ceceliacreates@gmail.com"><i class="fas fa-envelope fa-2x"
+                        style="color:#17a2b8"></i></a>
+                <a href="https://github.com/ceceliacreates"><i class="fab fa-github fa-2x"
+                        style="color:#17a2b8"></i></a>
+                <a href="https://twitter.com/ceceliacreates"><i class="fab fa-twitter fa-2x"
+                        style="color:#17a2b8"></i></a>
+                <a href="https://www.linkedin.com/in/ceceliamartinez/"><i class="fab fa-linkedin fa-2x"
+                        style="color:#17a2b8"></i></a>
             </div>
         </div>
     </div>
