--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
+    <nav class="navbar navbar-expand-lg navbar-dark justify-content-end" style="background-color:#17a2b8">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">About</a>
+                <a class="nav-link" href="index.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -29,14 +29,14 @@
         </div>
     </nav>
     <!--Main content container-->
-    <div class="container">
+    <div class="container mb-5">
         <div class="row">
             <div class="col-12 col-md-8 col-lg-6">
-                <h1 class="mt-1">Cecelia Martinez</h1>
+                <h1 class="mt-2">Cecelia Martinez</h1>
                 <h2 class="font-italic">Full-Stack Software Developer</h2>
             </div>
             <div class="col-12 col-md-4 col-lg-6">
-                <img src="avatar.png" class="img-fluid rounded-circle d-block mx-auto p-3">
+                <img src="assets/avatar.png" class="img-fluid rounded-circle d-block mx-auto p-3">
             </div>
         </div>
         <div class="row">
@@ -49,11 +49,15 @@
                     education, diversity, and accessibility. My hobbies include music, fiction writing, travel, and
                     dogs.</p>
             </div>
-            <div class="col-12 col-md-12 col-lg-6 text-center">
-                <i class="fas fa-envelope fa-2x"></i>
-                <i class="fab fa-github fa-2x"></i>
-                <i class="fab fa-twitter fa-2x"></i>
-                <i class="fab fa-linkedin fa-2x"></i>
+            <div class="col-12 col-md-12 col-lg-6 text-center mb-5">
+                <a href="mailto:ceceliacreates@gmail.com"><i class="fas fa-envelope fa-2x"
+                        style="color:#17a2b8"></i></a>
+                <a href="https://github.com/ceceliacreates"><i class="fab fa-github fa-2x"
+                        style="color:#17a2b8"></i></a>
+                <a href="https://twitter.com/ceceliacreates"><i class="fab fa-twitter fa-2x"
+                        style="color:#17a2b8"></i></a>
+                <a href="https://www.linkedin.com/in/ceceliamartinez/"><i class="fab fa-linkedin fa-2x"
+                        style="color:#17a2b8"></i></a>
             </div>
         </div>
     </div>
